fix text overflow

--- a/src/blocks/popup/__server-error/popup__server-error.css
+++ b/src/blocks/popup/__server-error/popup__server-error.css
@@ -8,6 +8,7 @@
   line-height: 15px;
   text-align: center;
   color: #ff0000;
+  word-break: break-all;
 }
 
 @media screen and (max-width: 480px) {
